--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.by1337.fparticle</groupId>
         <artifactId>FastParticle-parent</artifactId>
-        <version>1.3</version>
+        <version>1.5</version>
     </parent>
     <artifactId>bukkit</artifactId>
 
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>dev.by1337.fparticle</groupId>
             <artifactId>fparticle</artifactId>
-            <version>1.3</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -136,6 +136,18 @@
             <artifactId>netty-codec</artifactId>
             <version>4.1.115.Final</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>26.0.2-1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+            <version>3.51.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
