--- a/dumper/pom.xml
+++ b/dumper/pom.xml
@@ -4,9 +4,9 @@
     <parent>
         <groupId>dev.by1337.fparticle</groupId>
         <artifactId>FastParticle-parent</artifactId>
-        <version>1.3</version>
+        <version>1.5</version>
     </parent>
-    <artifactId>nms</artifactId>
+    <artifactId>dumper</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,7 +28,8 @@
                 <groupId>ca.bkaw</groupId>
                 <artifactId>paper-nms-maven-plugin</artifactId>
                 <version>${paper-nms.plugin.version}</version>
-            </plugin>            <plugin>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
@@ -69,6 +70,11 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>../mappings</directory>
+                <targetPath>mappings</targetPath>
                 <filtering>false</filtering>
             </resource>
         </resources>
@@ -127,7 +133,7 @@
         <dependency>
             <groupId>ca.bkaw</groupId>
             <artifactId>paper-nms</artifactId>
-            <version>1.21.10-SNAPSHOT</version>
+            <version>1.21.11-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
