feat: no bukkit api

--- a/render-bukkit/src/main/resources/plugin.yml
+++ b/render-bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-main: dev.by1337.particle.FParticlePlugin
-name: FParticle
+main: dev.by1337.particle.PluginParticleRender
+name: ParticleRender
 version: 1.5
 author: By1337
 api-version: "1.16"
@@ -7,6 +7,6 @@ website: 'https://github.com/By1337/ParticleRender'
 softdepend:
   - ViaVersion
 commands:
-  fparticle:
+  particlerender:
     aliases:
-      - fp
+      - pr
